@@ -1,11 +1,11 @@
 Name: fpl
 Version: 1.3.0
-Date: 2012-08-04
+Date: 2012-08-08
 Author: Carlo de Falco, Massimiliano Culpo and others
 Maintainer:  Carlo de Falco, Massimiliano Culpo
 Title: Fem PLotting
-Description: Collection of routines to save data in different graphical formats.
+Description: Collection of routines to export data produced by Finite Elements or Finite Volume Simulations in formats used by some visualization programs.
 Categories: Graphics
 Depends: octave ( >= 3.0.0 )
-License: GNU/GPL 
-SVNRelease: 10827
+License: GPLv3+
+
