@@ -2,6 +2,7 @@ FPL >> FEM Plotting
 functions to save data in VTK format
   fpl_vtk_write_field.m
   fpl_vtk_b64_write_field.m
+  fpl_vtk_raw_write_field.m
   fpl_vtk_assemble_series.m 
   savevtk
   savevtkvector
