@@ -5,7 +5,7 @@
 ##
 ##  FPL is free software; you can redistribute it and/or modify
 ##  it under the terms of the GNU General Public License as published by
-##  the Free Software Foundation; either version 2 of the License, or
+##  the Free Software Foundation; either version 3 of the License, or
 ##  (at your option) any later version.
 ##
 ##  FPL is distributed in the hope that it will be useful,
