@@ -6,8 +6,10 @@ Summary of important user-visible changes for dataframe 1.3.0:
  * ASCII VTK Unstructured Grid (VTU) exporter has been speeded up via
    code vectorization
 
+* A new function to write raw binary VTU files has been added
+
 * A new function to write base64-encoded binary VTU files has been added
-  (requires Octave >= 3.7)
+  (requires Octave >= 3.7, will fall back to ASCII mode otherwise)
 
 * New functions to write ASCII structured grid VTK files have been added
 
